--- a/DevExpress.VideoRent.Resources/Properties/Resources.resx
+++ b/DevExpress.VideoRent.Resources/Properties/Resources.resx
@@ -1676,4 +1676,16 @@ Please select the database type and connection options below.</value>
   <data name="CustomersStatsTitle1" xml:space="preserve">
     <value>Γενική Εικόνα Μελών Συλλόγου</value>
   </data>
+  <data name="Membership" xml:space="preserve">
+    <value>Registration</value>
+  </data>
+  <data name="MembershipType" xml:space="preserve">
+    <value>Membership Type</value>
+  </data>
+  <data name="MembershipTypeLabel" xml:space="preserve">
+    <value>Type of Membership</value>
+  </data>
+  <data name="StartDateLabel" xml:space="preserve">
+    <value>Start date</value>
+  </data>
 </root>
