--- a/DevExpress.VideoRent.Resources/Properties/Resources.resx
+++ b/DevExpress.VideoRent.Resources/Properties/Resources.resx
@@ -1691,4 +1691,7 @@ Please select the database type and connection options below.</value>
   <data name="AccountsModule" xml:space="preserve">
     <value>Customer Accounts</value>
   </data>
+  <data name="AccountTransactions" xml:space="preserve">
+    <value>Account Transactions</value>
+  </data>
 </root>
