--- a/DevExpress.VideoRent.Resources/Properties/Resources.resx
+++ b/DevExpress.VideoRent.Resources/Properties/Resources.resx
@@ -1706,4 +1706,7 @@ Please select the database type and connection options below.</value>
   <data name="MovelineId" xml:space="preserve">
     <value>MovelineId</value>
   </data>
+  <data name="DebitsGroup" xml:space="preserve">
+    <value>Debits</value>
+  </data>
 </root>
