--- a/DevExpress.VideoRent.Resources/Properties/Resources.resx
+++ b/DevExpress.VideoRent.Resources/Properties/Resources.resx
@@ -1727,4 +1727,7 @@ Please select the database type and connection options below.</value>
   <data name="AccountBalance" xml:space="preserve">
     <value>Account Balance</value>
   </data>
+  <data name="AthletsModule" xml:space="preserve">
+    <value>Athlets</value>
+  </data>
 </root>
